--- a/WMS/Views/Theme/Default/ShoppingVoucher/_CreateEdit.cshtml
+++ b/WMS/Views/Theme/Default/ShoppingVoucher/_CreateEdit.cshtml
@@ -68,7 +68,7 @@
         <div class="input-group h-100 justify-content-center align-items-center">
             @Html.LabelFor(m => m.VoucherUserId, new { @class = "col-md-4 control-label" })
             <div class="col-md-8">
-                @Html.DropDownListFor(c => c.VoucherUserId, new SelectList(ViewBag.UserList, "Value", "Text", Model.VoucherUserId), new { @placeholder = "User specific", @class = "form-control" })
+                @Html.DropDownListFor(c => c.VoucherUserId, new SelectList(ViewBag.UserList, "Value", "Text", Model.VoucherUserId), new { @placeholder = "User specific", @class = "form-control chosen-select" })
             </div>
         </div>
     </div>
