Replaced shop link with ruggedbarcodes.co.uk

--- a/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_HorizontalNavbarPartial.cshtml
@@ -111,7 +111,7 @@
 
 
         }
-        <li><a class="hardware-active" href="https://shop.ganedata.co.uk">Hardware</a></li>
+        <li><a class="hardware-active" href="https://ruggedbarcodes.co.uk">Hardware</a></li>
         @*book-demo-1 is for mobile view in dropdown navigation*@
         <li class="book-demo-1"><a href="@Url.Action("page", "Home", new { pageUrl = "get-started" })">Book A Demo</a></li>
         @*<li><a href="#"><i class="fa fa-search"></i></a></li>*@
