--- a/WMS/Views/Theme/Default/Shared/_AddPalletes.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_AddPalletes.cshtml
@@ -5,6 +5,7 @@
 <div class="col-md-12">
 
     <input type="text" id="palletpercase" value="@(ViewBag.PalletPerCase??1)" hidden />
+    <input type="text" id="OrderDetailID" value="@(ViewBag.OrderDetailId)" hidden />
     @if (Request.UrlReferrer.AbsolutePath.ToLower().Contains("purchaseorders") || (Request.UrlReferrer.AbsolutePath.ToLower().Contains("salesorders")) || Request.UrlReferrer.AbsolutePath.ToLower().Contains("worksorders") || Request.UrlReferrer.AbsolutePath.ToLower().Contains("goodsreturn")
         || Request.UrlReferrer.AbsolutePath.ToLower().Contains("blindshipment") || Request.UrlReferrer.AbsolutePath.ToLower().Contains("wastedgoodsreturn") || Request.UrlReferrer.AbsolutePath.ToLower().Contains("inventoryadjustments"))
 
@@ -148,10 +149,10 @@
                     || Request.UrlReferrer.AbsolutePath.ToLower().Contains("inventoryadjustments"))
 
                 {
-                <div class="col-md-8">
-                    <input type="text" class="cases" value="@((decimal?)ViewBag.cases??null)" hidden />
-                    <input type="text" class="casesReturns" value="@(ViewBag.RequiredQuantity==null?"": String.Format("{0:0.00}",(((decimal?)ViewBag.RequiredQuantity??null)/((decimal?)ViewBag.PalletPerCase??1))))" onchange="CasestoQunatity();" />
-                </div>
+                    <div class="col-md-8">
+                        <input type="text" class="cases" value="@((decimal?)ViewBag.cases??null)" hidden />
+                        <input type="text" class="casesReturns" value="@(ViewBag.RequiredQuantity==null?"": String.Format("{0:0.00}",(((decimal?)ViewBag.RequiredQuantity??null)/((decimal?)ViewBag.PalletPerCase??1))))" onchange="CasestoQunatity();" />
+                    </div>
 
                 }
                 else
@@ -170,8 +171,11 @@
                m.Properties.Caption = "Progress";
                if (ViewBag.RequiredQuantity != null && ViewBag.ProcessedQuantity != null)
                {
-                   decimal maxPos = Math.Max(ViewBag.RequiredQuantity, ViewBag.ProcessedQuantity);
-                   m.Position = ViewBag.ProcessedQuantity;
+                   int requiredQty = (int)Math.Round(ViewBag.RequiredQuantity, MidpointRounding.AwayFromZero);
+                   int processedQty = (int)Math.Round(ViewBag.ProcessedQuantity, MidpointRounding.AwayFromZero);
+
+                   decimal maxPos = Math.Max(requiredQty, processedQty);
+                   m.Position = processedQty;
                    m.Properties.Maximum = maxPos;
                    m.ToolTip = ViewBag.ProcessedQuantity + "/" + ViewBag.RequiredQuantity + " processed";
                }
