Fixed shop url in blogs

--- a/WarehouseEcommerce/Views/Theme/ElecTech/Home/Blog.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Home/Blog.cshtml
@@ -32,7 +32,7 @@
 
 <div class="row container-fluid pl-30 pr-30 mt-30 custom-max-width ml-auto mr-auto">
     <div class="col-lg-6">
-        <a href="https://shop.ganedata.co.uk/blog/category/ganenews/">
+        <a href="https://ruggedbarcodes.co.uk/blog/category/ganenews/">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
                 <div class="What-wedo-text text-center">
                     <div class="icon mb-20">
@@ -45,7 +45,7 @@
         </a>
     </div>
     <div class="col-lg-6">
-        <a href="https://shop.ganedata.co.uk/blog">
+        <a href="https://ruggedbarcodes.co.uk/blog">
             <div class="grey-bg1 pt-30 pb-30 pl-40 pr-40 mb-10">
                 <div class="What-wedo-text text-center">
                     <div class="icon mb-20">
