--- a/WMS/Views/SalesOrders/_SOShippingDetails.cshtml
+++ b/WMS/Views/SalesOrders/_SOShippingDetails.cshtml
@@ -53,9 +53,9 @@
                 </div>
             </div>
             <div class="col-md-6 float-left address-detail">
-                @Html.Label("Town", htmlAttributes: new { @class = "col-md-4 required-asterisk" })
+                @Html.Label("Town", htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
-                    @Html.TextBoxFor(m => m.ShipmentAddressTown, new { @class = "form-control", @required = "required" })
+                    @Html.TextBoxFor(m => m.ShipmentAddressTown, new { @class = "form-control"})
                 </div>
             </div>
             <div class="col-md-6 float-left address-detail">
