--- a/WMS/Views/InventoryStocks/Index.cshtml
+++ b/WMS/Views/InventoryStocks/Index.cshtml
@@ -21,7 +21,11 @@
 }
 
 <h2><span>@ViewBag.Title</span></h2>
-
+<div class="col-md-12 p-0 legend-pane">
+    <p class="pull-left" style="text-align:left;margin-bottom:0px"><label style="height:12px;width:24px;background-color:#FFC1C1;vertical-align:middle"></label> Out of Stock</p>
+    <p class="pull-left" style="text-align:left;margin-bottom:0px"><label style="height:12px;width:24px;background-color:#ffa535;vertical-align:middle"></label>  Less than 10% to Min stock level</p>
+    <div class="clearfix"></div>
+</div>
 <script type="text/javascript">
     function OnGridFocusedRowChanged(s, e) {
         $('#selkey').val(s.GetRowKey(s.GetFocusedRowIndex()));
