Implementation of Holding BeingPacked when set to OrderUpdating and other testing fixes for  T46/T47

--- a/WMS/Views/Order/_SalesOrders.cshtml
+++ b/WMS/Views/Order/_SalesOrders.cshtml
@@ -283,7 +283,7 @@
 
                     Html.DevExpress().ProgressBar(pb =>
                     {
-                        pb.Name = "pb" + (int)DataBinder.Eval(m.DataItem, "OrderID");
+                        pb.Name = "pb"+ Guid.NewGuid().ToString("N") + (int)DataBinder.Eval(m.DataItem, "OrderID");
                         pb.ToolTip = Qty + "/" + (processQty - returnQty) + " processed";
                         pb.Properties.IndicatorStyle.BackColor = System.Drawing.Color.DarkRed;
                         pb.EnableTheming = false;
