--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_PaymentMethod.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_PaymentMethod.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Ganedata.Core.Entities.Enums
+
 <div class="checkout-options-wrapper">
     <h5 class="subheadCmn">Select Payment Method</h5>
     <div class="checkboxwrap">
@@ -6,7 +7,7 @@
                id="cash__checkbox"
                type="radio"
                name="payment-method-radio"
-               value="@((int)PaymentMethod.Cash)" />
+               value="@((int)Ganedata.Core.Entities.Enums.PaymentMethod.Cash)" />
         <label for="cash__checkbox">Cash</label>
     </div>
     <div class="checkboxwrap">
