Ecommerce fixes for contacts, individual contact emails based on config and paypal configuration/testing

--- a/WMS/Views/Reports/MarketRoutePrint.cshtml
+++ b/WMS/Views/Reports/MarketRoutePrint.cshtml
@@ -12,7 +12,7 @@
 }
 
 @{
-    Layout = "~/Views/Theme/Default/Shared/_Layout-no-header-left.cshtml";
+    Layout = "_Layout-no-header-left.cshtml";
     ViewBag.Title = "Market Route Print";
 }
 
