Removed changes in the view for GelBottle goLive

--- a/WMS/Views/Shared/_AttrValueCreate.cshtml
+++ b/WMS/Views/Shared/_AttrValueCreate.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         
-        @if (Model.ProductAttributes!=null && Model.ProductAttributes.IsPriced)
+        @*@if (Model.ProductAttributes!=null && Model.ProductAttributes.IsPriced)
         {
             <div class="input-group h-100 justify-content-center align-items-center">
                 <label class="col-md-3">Custom Price<span style="color:red">*</span></label>
@@ -30,7 +30,7 @@
                     @Html.ValidationMessageFor(model => model.AttributeSpecificPrice)
                 </div>
             </div>
-        }
+        }*@
 
         <div class="input-group h-100 justify-content-center align-items-center">
             <label class="col-md-3">Color</label>
