--- a/WMS/Views/Shared/_AttributeCreate.cshtml
+++ b/WMS/Views/Shared/_AttributeCreate.cshtml
@@ -20,13 +20,13 @@
                 @Html.ValidationMessageFor(model => model.SortOrder)
             </div>
         </div>
-        <div class="input-group h-100 justify-content-center align-items-center">
-            <label class="col-md-4">Is Color Typed</label>
+        @*<div class="input-group h-100 justify-content-center align-items-center">
+            <label class="col-md-4">Is Priced</label>
             <div class="col-md-8">
                 @Html.EditorFor(model => model.IsPriced)
                 @Html.ValidationMessageFor(model => model.IsPriced)
             </div>
-        </div>
+        </div>*@
         <div class="input-group h-100 justify-content-center align-items-center">
             <label class="col-md-4">Is Color Typed</label>
             <div class="col-md-8">
